rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_for__tests__define_for_statement_state_machine_multiple-2.snap
---
source: surrealdb-macros/src/query_for.rs
expression: for_res.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyedayo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyedayo'",
        description: None,
    },
]
