rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_for__tests__define_for_statement_state_machine_multiple.snap
---
source: surrealdb-macros/src/query_for.rs
expression: for_res
---
FOR create, delete, select, update
	WHERE name IS $_param_00000000
